--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+    <title>Hoai-vo Viet Phuc</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&family=Quicksand:wght@300..700&family=Sacramento&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Gothic&family=Mrs+Sheppards&family=Poiret+One&family=Quicksand:wght@300..700&family=Rozha+One&family=Sacramento&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+</head>
+<body>
+
+</body>
+
+</html>
