--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Hoai's Homepage</title>
 
-<head>
-    <title>Hoai-vo Viet Phuc</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&family=Quicksand:wght@300..700&family=Sacramento&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mrs+Sheppards&family=Quicksand:wght@300..700&family=Sacramento&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Gothic&family=Mrs+Sheppards&family=Poiret+One&family=Quicksand:wght@300..700&family=Rozha+One&family=Sacramento&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Gothic&family=Mrs+Sheppards&family=Poiret+One&family=Quicksand:wght@300..700&family=Rozha+One&family=Sacramento&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="favicon.png">
+    </head>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
-</head>
-<body>
+    <body>
 
-</body>
+        <div class="hoaititle">
+            <img src="texttest.png">
+        </div>
+        
+        <p class="title">Hoai-vo</p>
+        <p>Welcome to my portfolio</p>
+        
+        <div class="grid-container">
+            <div class="item"><a href="about-me/index.html">About Me</a></div>
+            <div class="item"><a href="my-store/index.html">My Store</a></div>
+            <div class="item"><a href="theory-inquiry/index.html">Theory Inquiry</a></div>
+        </div>
 
+        <p>&copy; 2024 Hoai Ngoc Vo 2024</p>
+    </body>
 </html>
