--- a/theory-inquiry/week3/index.html
+++ b/theory-inquiry/week3/index.html
@@ -14,25 +14,46 @@
        Hoai Ngoc Vo
     </div>
 
-    <h3>Week 1: Laurel Schwulst, My website is a shifting house next to a river of knowledge. What could yours be?</h3>
+    <h3>Image 1</h3>
 
     <div class="img">
-        <img src="image1.jpg" alt="Image 1">
+        <img src="image1.jpeg" alt="Image 1">
     </div>
 
     <div class="citation">
-        <p>Citation: Laurel Schwulst, “My website is a shifting house next to a river of knowledge.”</p>
+        <p>Citation:  J.D. Salinger, “The Catcher in the Rye”</p>
     </div>
 
     <div class="space">
-        Take a photograph of each of the three (3) items.
-
-        Write short responses (about 150 words for each) for each of the representations you’ve chosen. You might answer these questions: How accurate is this representation to the thing it is referring or representing? What has been filtered out? Does it contain misleading information or distortions? Is the representation successful in its function overall?
-        
-        Post the image and the text for each representation to your public facing web site.
-        
-        Submit the URL to the entries to complete the assignment.
+        This is a cover image of the book “The Catcher of the Rye”, in which the main subject is a representation of a horse in the story. I think this cover image represents its original object quite accurately. However, of course, the artist has filtered out details like the color, shadow, muscles, etc. The palette is paige and orange which is very different from the original object, however in this case it is successful because it makes the image stand out longer in viewers’ memories and leaves a strong first impression. The horse in the original 3D rigi anima form is simplified through organic lines, and shapes, creating a flowyness feel that contracts with its original form. Far Away is also a simplified drawing of the city where the story is set. It is a successful representation by intentional selection but at the same time rightfully represents its original object.
     </div>
 
+    <h3>Image 2</h3>
+
+    <div class="img">
+        <img src="image2.jpeg" alt="Image 2">
+    </div>
+
+    <div class="citation">
+        <p>Citation: Hoai Ngoc Vo, “Set of Christmas Candles”</p>
+    </div>
+
+    <div class="space">
+        This is a set of candles for the Winter Holiday - Noel, which carves an X-mas tree, Santa Claus, and a house covered in snow. I think to a degree, this is a good representation of the original objects. However, it is stylized, and distorted in a more chibi scale with extra simplification for cuteness instead of a 1-1 representation. Some details have been filtered out including the star on top of the tree, Santa bag of presents, door of the house. However, the color is well present and accurate. This palette reminds viewers of the holiday and these original objects. I don’t think it is misleading. In a way, it is successful since it accomplishes the purpose of the creator which creates mini-model candles that are meant for the holiday season. I believe they could have done a better job in the details, but this also means the price will increase as well.
+    </div>
+
+    <h3>Image 3</h3>
+
+    <div class="img">
+        <img src="image3.jpeg" alt="Image 3">
+    </div>
+
+    <div class="citation">
+        <p>Citation: Hoai Ngoc Vo, “My Carrot Squishy”</p>
+    </div>
+
+    <div class="space">
+        This is my carrot squish toy that my mom gifted me from the travel office. I don’t think it is an accurate presentation because it has been personified to look like a human form. It is also a combination of the rabbit idea, which is an animal that loves carrots. The ears were added, with eyes, nose, mouth, and blush, as well as two little legs. The creator probably did not intend to make the exact carrot, but wants it to be massively different except for a carrot embroidery on its body. It does contain some distortions, for example, the changes in sizes and additional features that belong to another subject. However, I think it is a successful representation of its purpose. This squish is meant for children or those who love cute animals, and objects. By personifying the carrot as an adorable rabbit, the target audience’s attention is caught and curious about this new combination.
+    </div>
 </body>
 </html>
