--- a/theory-inquiry/week3/index.html
+++ b/theory-inquiry/week3/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="space">
-        This is a cover image of the book “The Catcher of the Rye”, in which the main subject is a representation of a horse in the story. I think this cover image represents its original object quite accurately. However, of course, the artist has filtered out details like the color, shadow, muscles, etc. The palette is paige and orange which is very different from the original object, however in this case it is successful because it makes the image stand out longer in viewers’ memories and leaves a strong first impression. The horse in the original 3D rigi anima form is simplified through organic lines, and shapes, creating a flowyness feel that contracts with its original form. Far Away is also a simplified drawing of the city where the story is set. It is a successful representation by intentional selection but at the same time rightfully represents its original object.
+        This is a cover image of the book “The Catcher of the Rye”, in which the main subject is a representation of a horse in the story. I think this cover image represents its original object quite accurately. However, of course, the artist has filtered out details like the color, shadow, muscles, etc. The palette is paige and orange which is very different from the original object, however in this case it is successful because it makes the image stand out longer in viewers’ memories and leaves a strong first impression. The horse in the original 3D digi animal form is simplified through organic lines, and shapes, creating a flowyness feel that contracts with its original form. Far away is also a simplified drawing of the city where the story is set. It is a successful representation by intentional selection but at the same time rightfully represents its original object.
     </div>
 
     <h3>Image 2</h3>
@@ -55,5 +55,7 @@
     <div class="space">
         This is my carrot squish toy that my mom gifted me from the travel office. I don’t think it is an accurate presentation because it has been personified to look like a human form. It is also a combination of the rabbit idea, which is an animal that loves carrots. The ears were added, with eyes, nose, mouth, and blush, as well as two little legs. The creator probably did not intend to make the exact carrot, but wants it to be massively different except for a carrot embroidery on its body. It does contain some distortions, for example, the changes in sizes and additional features that belong to another subject. However, I think it is a successful representation of its purpose. This squish is meant for children or those who love cute animals, and objects. By personifying the carrot as an adorable rabbit, the target audience’s attention is caught and curious about this new combination.
     </div>
+
+    <div class="copyright">&copy; 2024 Hoai Ngoc Vo</div>
 </body>
 </html>
