--- a/theory-inquiry/index.html
+++ b/theory-inquiry/index.html
@@ -25,9 +25,12 @@
         <p>Welcome to my portfolio</p>
         
         <div class="grid-container">
-            <div class="item"><a href="week3/index.html">Week 3</a></div>div>
+            <div class="item"><a href="week3/index.html">Week 3</a></div>
         </div>
 
+        <div class="grid-container">
+            <div class="item"><a href="week4/index.html">Week 4</a></div>
+        </div>
         <p>&copy; 2024 Hoai Ngoc Vo 2024</p>
     </body>
 </html>
