--- a/theory-inquiry/week3/index.html
+++ b/theory-inquiry/week3/index.html
@@ -9,10 +9,13 @@
 <body>
 
     <h1>Everyday Representations</h1>
+    <h2>Week 3</h2>
 
     <div class="name">
        Hoai Ngoc Vo
     </div>
+    
+    <div class="divider"></div>
 
     <h3>Image 1</h3>
 
