--- a/theory-inquiry/week4/index.html
+++ b/theory-inquiry/week4/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 
-    <h1>Classification of Sign Types</h1>
+    <h1>Classification of Sign Types</h1>     
+    <h2>Week 4</h2>
 
     <div class="name">
        Hoai Ngoc Vo
     </div>
 
+    <div class="divider"></div>
+    
     <h3>Image 1</h3>
 
     <div class="img">
