--- a/theory-inquiry/index.html
+++ b/theory-inquiry/index.html
@@ -31,6 +31,11 @@
         <div class="grid-container">
             <div class="item"><a href="week4/index.html">Week 4</a></div>
         </div>
+
+        <div class="grid-container">
+            <div class="item"><a href="week7/index.html">Week 7</a></div>
+        </div>
+
         <p>&copy; 2024 Hoai Ngoc Vo 2024</p>
     </body>
 </html>
