--- a/theory-inquiry/index.html
+++ b/theory-inquiry/index.html
@@ -36,6 +36,10 @@
             <div class="item"><a href="week7/index.html">Week 7</a></div>
         </div>
 
+        <div class="grid-container">
+            <div class="item"><a href="week9/index.html">Week 9</a></div>
+        </div>
+
         <p>&copy; 2024 Hoai Ngoc Vo 2024</p>
     </body>
 </html>
