--- a/theory-inquiry/week10/index.html
+++ b/theory-inquiry/week10/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-    <h1>Observing & Describing Assignment</h1>     
-    <h2>Week 9</h2>
+    <h1>Reading — Make questions
+    </h1>     
+    <h2>Week 10</h2>
 
     <div class="name">
        Hoai Ngoc Vo
