--- a/theory-inquiry/week12/index.html
+++ b/theory-inquiry/week12/index.html
@@ -20,7 +20,7 @@
     <h3>Minor Threats by Mimi Thi Nguyen</h3>
 
     <div class="space">
-      <b>Participants:</b> Hoai, Kelem, Nardos (Gabe didn't submit his part)
+      <b>Participants:</b> Hoai, Kelem, Nardos, Gabe
     </div>
 
     <div class="space">
@@ -58,6 +58,9 @@
     </div>
 
     <h3>Identify and name similarities between the movie and the text. Identify and name differences between the two?</h3>
+
+    <div class="space">Both the film and the texts delve deeply into what role the individual plays in upholding democracy. Both the film and texts agree that, on an individual scale, citizens play a part in upholding democracy, but they differ in what degree that part is and how it is achieved. In the texts Hand and Caplan both put the citizen’s role mainly as participating in democracy, mostly through voting and other forms of direct engagement through traditional methods. On the other hand, Jacob shows throughout the runtime of the film that she believes that citizens have a duty to engage with democratic systems in ways other than traditional means such as voting.
+    </div>
 
     <div class="space">       
         <b>Similarities</b>
