--- a/theory-inquiry/week13/index.html
+++ b/theory-inquiry/week13/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-    <h1>Citizen Jane; Judge Learned Hand (1944) and Lincoln Caplan (2024) </h1>     
-    <h2>Week 12</h2>
+    <h1>Letterforms, three ways (writing, lettering, & typography)</h1>     
+    <h2>Week 13</h2>
 
     <div class="name">
        Hoai Ngoc Vo
     </div>
 
     <div class="divider"></div>
+    
+    <h3>Minor Threats by Mimi Thi Nguyen</h3>
 
     <div class="space">
       <b>Participants:</b> Hoai, Kelem, Nardos, Gabe
