--- a/theory-inquiry/week13/index.html
+++ b/theory-inquiry/week13/index.html
@@ -77,7 +77,7 @@
     </div> 
 
     <div class="img">
-        <img src="image2.jpeg" alt="Image 2">
+        <img src="lettering2.jpeg" alt="Image 2">
     </div>
 
     <div class="space">
