--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="item"><a href="about-me/index.html">About Me</a></div>
             <div class="item"><a href="my-store/index.html">My Store</a></div>
             <div class="item"><a href="theory-inquiry/index.html">Theory Inquiry</a></div>
+            <div class="item"><a href="Translation-machine/index.html">translation Machine</a></div>
         </div>
 
         <p>&copy; 2024 Hoai Ngoc Vo 2024</p>
