--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -1,75 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piano Light Painting</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
-<header>
-    <h1>Hoai-vo Store</h1>
+    <header>
+        <div class="header-content">
+            <h1>My Piano Performances</h1>
+        </div>
+    </header>
+
     <div class="logo-container">
-        <img src="logo-noBG.PNG" alt="Your Logo">
-    </div>
-    <div class="menu-btn" onclick="toggleMenu()">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+        <img src="" alt="Your Logo">
     </div>
 
-    <div class="menu-overlay" id="menu-overlay">
-        <div class="menu-content">
-            <!-- About Us Section -->
-            <a href="#" id="about-me-btn" class="accordion">About Us</a>
-            <div id="about-me-panel" class="panel">
-                <div class="paragraph-box">
-                    <p>This store is owned by Hoai Ngoc Vo, a Viet content creator who specializes in ancient history and culture...</p>
-                </div>
-            </div>
+    <!-- Performances Button -->
+<button id="toggleButton" class="performances-btn">Performances</button>
 
-            <!-- Song List Dropdown -->
-            <a href="#" class="accordion">Performances</a>
-            <div class="panel">
-                <div class="song-dropdown">
-                    <a href="#" onclick="loadGallery('song1', 'Song 1', 'Composer 1', 'video1')">Song 1</a>
-                    <a href="#" onclick="loadGallery('song2', 'Song 2', 'Composer 2', 'video2')">Song 2</a>
-                    <a href="#" onclick="loadGallery('song3', 'Song 3', 'Composer 3', 'video3')">Song 3</a>
-                </div>
-            </div>
-        </div>
+<!-- Song List Dropdown -->
+<div id="songList" class="panel">
+    <ul>
+        <li><a href="#" onclick="loadGallery('song1', 'Song Title 1', 'Composer 1', 'videoID1', [
+            'images/song1-image1.jpg', 'images/song1-image2.jpg', 'images/song1-image3.jpg', 'images/song1-image4.jpg'
+        ])">Song 1</a></li>
+        <li><a href="#" onclick="loadGallery('song2', 'Song Title 2', 'Composer 2', 'videoID2', [
+            'images/song2-image1.jpg', 'images/song2-image2.jpg', 'images/song2-image3.jpg', 'images/song2-image4.jpg'
+        ])">Song 2</a></li>
+        <li><a href="#" onclick="loadGallery('song3', 'Song Title 3', 'Composer 3', 'videoID3', [
+            'images/song3-image1.jpg', 'images/song3-image2.jpg', 'images/song3-image3.jpg', 'images/song3-image4.jpg'
+        ])">Song 3</a></li>
+    </ul>
+</div>
+
+    <!-- Song Info -->
+    <div id="song-info">
+        <h1 id="song-title">Song Title</h1>
+        <p id="composer-name">Composer Name</p>
     </div>
-</header>
 
-    <main>
-        <!-- Song Title & Composer -->
-        <h1 id="song-title">Song 1</h1>
-        <h3 id="composer-name">Composer 1</h3>
+    <!-- YouTube Video -->
+    <div id="video-frame-container"></div>
 
-        <!-- Video Player -->
-        <div class="video-container">
-            <iframe id="video-frame" width="560" height="315" 
-                src="https://www.youtube.com/embed/video1" 
-                frameborder="0" allowfullscreen>
-            </iframe>
-        </div>
+    <!-- Space -->
+    <div class="space"></div>
+    
+    <!-- Image Gallery -->
+    <div class="gallery" id="galleryContainer"></div>
 
-        <!-- Image Gallery -->
-        <div class="gallery" id="galleryContainer"></div>
+    <!-- Lightbox for Enlarged Images -->
+    <div id="lightbox">
+        <span class="close" onclick="closeLightbox()">&times;</span>
+        <img id="lightboxImage">
+        <span class="prev" onclick="changeImage(-1)">&#10094;</span>
+        <span class="next" onclick="changeImage(1)">&#10095;</span>
+    </div>
 
-        <!-- Lightbox for Enlarged Images -->
-        <div id="lightbox">
-            <span class="close" onclick="closeLightbox()">&times;</span>
-            <img id="lightboxImage">
-            <span class="prev" onclick="changeImage(-1)">&#10094;</span>
-            <span class="next" onclick="changeImage(1)">&#10095;</span>
-        </div>
-    </main>
+    <footer>
+        <p>&copy; 2024 Your Piano Website</p>
+    </footer>
 
-    <!-- Link JavaScript File -->
     <script src="script.js" defer></script>
+
 </body>
 </html>
