--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -38,17 +38,17 @@
     <!-- Song List Dropdown -->
     <div id="songList" class="panel">
         <ul>
-            <li><a href="#" onclick="loadGallery('song1', 'Für Elise', 'Beethoven', 'exampleVideoID1', [
-            'images/song1-image1.jpg', 'images/song1-image2.jpg', 'images/song1-image3.jpg', 'images/song1-image4.jpg'
+            <li><a href="#" onclick="loadGallery('song1', 'Für Elise', 'Beethoven', 'EF28JOgAZr4', [
+            'images/song1-image1.jpg', 'images/song1-image2.jpg', 'images/song1-image3.jpg', 'images/song1-image4.jpg', 'images/song1-image5.jpg'
             ])">Für Elise</a></li>
 
-            <li><a href="#" onclick="loadGallery('song2', 'Mariage d\'Amour', 'Paul de Senneville', 'exampleVideoID2', [
-                'images/song2-image1.jpg', 'images/song2-image2.jpg', 'images/song2-image3.jpg', 'images/song2-image4.jpg'
+            <li><a href="#" onclick="loadGallery('song2', 'Mariage d\'Amour', 'Paul de Senneville', 'JQ7fD92GEDo', [
+                'images/song2-image1.jpg', 'images/song2-image2.jpg', 'images/song2-image3.jpg', 'images/song2-image4.jpg', 'images/song2-image5.jpg'
             ])">Mariage d'Amour</a></li>
 
-            <li><a href="#" onclick="loadGallery('song3', 'Your Third Song', 'Composer Name', 'exampleVideoID3', [
-                'images/song3-image1.jpg', 'images/song3-image2.jpg', 'images/song3-image3.jpg', 'images/song3-image4.jpg'
-            ])">Your Third Song</a></li>
+            <li><a href="#" onclick="loadGallery('song3', 'Toccata', 'Paul Mauriat', 'vOWgvDWijjM', [
+                'images/song3-image1.jpg', 'images/song3-image2.jpg', 'images/song3-image3.jpg', 'images/song3-image4.jpg', 'images/song3-image5.jpg'
+            ])">Toccata</a></li>
         </ul>            
     </div>
 
@@ -116,9 +116,9 @@
         <ul id="pdf-list">
             <!-- List items will be dynamically generated here -->
             <li>
-                <span>Song 1</span>
-                <a href="song1.pdf" target="_blank" class="view-btn">View</a>
-                <a href="song1.pdf" download class="download-btn">Download</a>
+                <span>Virus</span>
+                <a href="sheets/beethoven-virus.pdf" target="_blank" class="view-btn">View</a>
+                <a href="sheets/beethoven-virus.pdf" download class="download-btn">Download</a>
             </li>
             <li>
                 <span>Song 2</span>
