--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -130,6 +130,12 @@
                 <a href="song3.pdf" target="_blank" class="view-btn">View</a>
                 <a href="song3.pdf" download class="download-btn">Download</a>
             </li>
+
+            <li>
+                <span>Song 4</span>
+                <a href="song3.pdf" target="_blank" class="view-btn">View</a>
+                <a href="song3.pdf" download class="download-btn">Download</a>
+            </li>
             <!-- More list items... -->
         </ul>
     </div>
