--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Toggleable Sheet Music List -->
-    <button id="toggleSheetMusic" class="cute-sheet-music-btn">🎵 Download By Composer 🎀</button>
+    <button id="toggleSheetMusic" class="cute-sheet-music-btn">🎵 View By Composer 🎀</button>
 
     
     <!-- <div id="sheetMusicList" class="sheet-music-panel">
