--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -116,7 +116,7 @@
         <ul id="pdf-list">
             <!-- List items will be dynamically generated here -->
             <li>
-                <span>Virus</span>
+                <span>Song 1</span>
                 <a href="sheets/beethoven-virus.pdf" target="_blank" class="view-btn">View</a>
                 <a href="sheets/beethoven-virus.pdf" download class="download-btn">Download</a>
             </li>
