--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -89,13 +89,13 @@
     <div id="sheetMusicList" class="sheet-music-panel" style="display: none;">
         <div id="Beethoven" class="composer-sheet-list" style="display: none;">
             <ul>
-                <li><a href="sheets/beethoven_song1.pdf" download>Song Title 1 - Beethoven</a></li>
-                <li><a href="sheets/beethoven_song2.pdf" download>Song Title 2 - Beethoven</a></li>
+                <li><a href="sheets/beethoven-virus.pdf" download>【 Virus 】- Beethoven</a></li>
+                <li><a href="sheets/fur-elise.pdf" download>【 Fur Elise 】- Beethoven</a></li>
             </ul>
         </div>
         <div id="Mozart" class="composer-sheet-list" style="display: none;">
             <ul>
-                <li><a href="sheets/mozart_song1.pdf" download>Song Title 1 - Mozart</a></li>
+                <li><a href="sheets/lacrimosa-requiem.pdf" download>【 Lacrimosa 】 - Mozart</a></li>
                 <li><a href="sheets/mozart_song2.pdf" download>Song Title 2 - Mozart</a></li>
             </ul>
         </div>
