--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -95,14 +95,13 @@
         </div>
         <div id="Mozart" class="composer-sheet-list" style="display: none;">
             <ul>
-                <li><a href="sheets/lacrimosa-requiem.pdf" download>【 Lacrimosa 】 - Mozart</a></li>
-                <li><a href="sheets/mozart_song2.pdf" download>Song Title 2 - Mozart</a></li>
+                <li><a href="sheets/lacrimosa-requiem.pdf" download>【 Lacrimosa 】- Mozart</a></li>
             </ul>
         </div>
         <div id="Vladimir Stezers" class="composer-sheet-list" style="display: none;">
             <ul>
-                <li><a href="sheets/vladimir_song1.pdf" download>Song Title 1 - Vladimir Stezers</a></li>
-                <li><a href="sheets/vladimir_song2.pdf" download>Song Title 2 - Vladimir Stezers</a></li>
+                <li><a href="sheets/tears-on-the-piano-key.pdf" download>【 Tears On The Piano Keys 】- Vladimir Stezers</a></li>
+                <li><a href="sheets/ill-return-to-you-but-ill-be-different.pdf" download>【 I'll Return To You But I'll Be Differents 】- Vladimir Stezers</a></li>
             </ul>
         </div>
     </div>
