--- a/translation-machine/index.html
+++ b/translation-machine/index.html
@@ -91,6 +91,19 @@
         <div id="galleryContainer" class="gallery-container"></div>
     </section>
 
+    <section class="project-intro">
+        <div class="intro-window">
+            <h2>Why I Chose This Project</h2>
+            <p>
+            My love for traditional clothing has always been a way to reconnect with history, especially my passion for medieval Vietnam.  
+            
+            But every time I hear the piano, it transports me to another world—one of vintage elegance and medieval Europe.  
+            Growing up, I spent hours playing, but as life pulled me online, I drifted away from it.  
+            This project is my way of weaving both worlds together, rediscovering my love for music while embracing my fascination with the past.
+            </p>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Hoai - Painted Melody</p>
